# box

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  INSTALL.md  README.md  bootstrap.sh  install.sh  package-lock.json  package.json  provision.sh
concierge/: 00-install-this.md  10-provision-server.md  20-api-keys.md  30-linear.md  40-stable-url.md  50-power-ups.md  README.md
docs/: pr-autopilot.md  session-watcher.md  slack-events.md  voice-half-duplex.md  voice-memory-privacy.md  voice-session-archive.md  voice-session-history.md
harness/: CLAUDE.md  cron.example  google  google-auth.mjs  needs-me.mjs  settings.json.example  slack.mjs
public/: app.js  index.html  manifest.webmanifest  style.css  sw.js  voice-notify-queue.js  voice.js  xlsx-worker.js
scripts/: install-pr-autopilot.mjs  install-slack-events.mjs  keeper.sh  pr-autopilot.mjs  smoke-chat.mjs  voice-e2e-browser.mjs  voice-evals.mjs  voice-smoke.mjs
server/: accounts.mjs  agy-exec-engine.mjs  codex-context.mjs  codex-context.test.mjs  codex-exec-engine.mjs  codex-exec-engine.test.mjs  codex-rollout-history.mjs  codex-rollout-history.test.mjs  gemini-exec-engine.mjs  index.mjs  livekit-voice.mjs  livekit-voice.test.mjs  local-file-resolver.mjs  local-file-resolver.test.mjs  mac-exec-engine.mjs  mac-exec-engine.test.mjs  meeting-context.mjs  meeting-context.test.mjs  oauth.mjs  provider-login.mjs  queue-state.mjs  queue-state.test.mjs  rc-engine.mjs  session-watcher.mjs  session-watcher.test.mjs  slack-context.mjs  (+10 more)
voice-runtime/: box_voice_agent.py  pyproject.toml  test_box_voice_agent.py
(+12 files in other folders)
